--- a/Noefr/103675-the-million-dollar-challenge/rus.textile
+++ b/Noefr/103675-the-million-dollar-challenge/rus.textile
@@ -1,68 +1,68 @@
-Вызов на миллион долларов
+Р’С‹Р·РѕРІ РЅР° РјРёР»Р»РёРѕРЅ РґРѕР»Р»Р°СЂРѕРІ
 
-Автор: Noefr
+РђРІС‚РѕСЂ: Noefr
 
 *000*2024-08-02 21:38
 
-Глава 1: Вызов на миллион долларов
+Р“Р»Р°РІР° 1: Р’С‹Р·РѕРІ РЅР° РјРёР»Р»РёРѕРЅ РґРѕР»Р»Р°СЂРѕРІ
 
-Эмма проснулась от толчка, не потому что ей приснился кошмар, а потому что её телефон издал резкий звук, который вырвал её из сна.
+Р­РјРјР° РїСЂРѕСЃРЅСѓР»Р°СЃСЊ РѕС‚ С‚РѕР»С‡РєР°, РЅРµ РїРѕС‚РѕРјСѓ С‡С‚Рѕ РµР№ РїСЂРёСЃРЅРёР»СЃСЏ РєРѕС€РјР°СЂ, Р° РїРѕС‚РѕРјСѓ С‡С‚Рѕ РµС‘ С‚РµР»РµС„РѕРЅ РёР·РґР°Р» СЂРµР·РєРёР№ Р·РІСѓРє, РєРѕС‚РѕСЂС‹Р№ РІС‹СЂРІР°Р» РµС‘ РёР· СЃРЅР°.
 
-Она потёрла глаза, чтобы проснуться, и задалась вопросом, что могло вызвать такой шум. Она повернулась к телефону, надеясь, что он не разбудил её родителей или сестру. Экран телефона был выключен, но маленький зелёный огонёк указывал на то, что она получила сообщение.
+РћРЅР° РїРѕС‚С‘СЂР»Р° РіР»Р°Р·Р°, С‡С‚РѕР±С‹ РїСЂРѕСЃРЅСѓС‚СЊСЃСЏ, Рё Р·Р°РґР°Р»Р°СЃСЊ РІРѕРїСЂРѕСЃРѕРј, С‡С‚Рѕ РјРѕРіР»Рѕ РІС‹Р·РІР°С‚СЊ С‚Р°РєРѕР№ С€СѓРј. РћРЅР° РїРѕРІРµСЂРЅСѓР»Р°СЃСЊ Рє С‚РµР»РµС„РѕРЅСѓ, РЅР°РґРµСЏСЃСЊ, С‡С‚Рѕ РѕРЅ РЅРµ СЂР°Р·Р±СѓРґРёР» РµС‘ СЂРѕРґРёС‚РµР»РµР№ РёР»Рё СЃРµСЃС‚СЂСѓ. Р­РєСЂР°РЅ С‚РµР»РµС„РѕРЅР° Р±С‹Р» РІС‹РєР»СЋС‡РµРЅ, РЅРѕ РјР°Р»РµРЅСЊРєРёР№ Р·РµР»С‘РЅС‹Р№ РѕРіРѕРЅС‘Рє СѓРєР°Р·С‹РІР°Р» РЅР° С‚Рѕ, С‡С‚Рѕ РѕРЅР° РїРѕР»СѓС‡РёР»Р° СЃРѕРѕР±С‰РµРЅРёРµ.
 
-Кто мог писать ей сообщения посреди ночи, и она подумала, что поставила телефон на беззвучный режим. Она включила телефон и первым делом заметила время, было ровно полночь, затем она сосредоточилась на полученном сообщении.
+РљС‚Рѕ РјРѕРі РїРёСЃР°С‚СЊ РµР№ СЃРѕРѕР±С‰РµРЅРёСЏ РїРѕСЃСЂРµРґРё РЅРѕС‡Рё, Рё РѕРЅР° РїРѕРґСѓРјР°Р»Р°, С‡С‚Рѕ РїРѕСЃС‚Р°РІРёР»Р° С‚РµР»РµС„РѕРЅ РЅР° Р±РµР·Р·РІСѓС‡РЅС‹Р№ СЂРµР¶РёРј. РћРЅР° РІРєР»СЋС‡РёР»Р° С‚РµР»РµС„РѕРЅ Рё РїРµСЂРІС‹Рј РґРµР»РѕРј Р·Р°РјРµС‚РёР»Р° РІСЂРµРјСЏ, Р±С‹Р»Рѕ СЂРѕРІРЅРѕ РїРѕР»РЅРѕС‡СЊ, Р·Р°С‚РµРј РѕРЅР° СЃРѕСЃСЂРµРґРѕС‚РѕС‡РёР»Р°СЃСЊ РЅР° РїРѕР»СѓС‡РµРЅРЅРѕРј СЃРѕРѕР±С‰РµРЅРёРё.
 
-Сообщение называлось «Вызов на миллион долларов», и она сразу подумала, что это спам, и не решалась его открыть, но всё равно сделала это, расстроенная тем, что её разбудили среди ночи из-за мошенничества. Она открыла сообщение и заметила, что его прочтение не займёт много времени, поэтому она начала читать, ещё не совсем проснувшись:
+РЎРѕРѕР±С‰РµРЅРёРµ РЅР°Р·С‹РІР°Р»РѕСЃСЊ В«Р’С‹Р·РѕРІ РЅР° РјРёР»Р»РёРѕРЅ РґРѕР»Р»Р°СЂРѕРІВ», Рё РѕРЅР° СЃСЂР°Р·Сѓ РїРѕРґСѓРјР°Р»Р°, С‡С‚Рѕ СЌС‚Рѕ СЃРїР°Рј, Рё РЅРµ СЂРµС€Р°Р»Р°СЃСЊ РµРіРѕ РѕС‚РєСЂС‹С‚СЊ, РЅРѕ РІСЃС‘ СЂР°РІРЅРѕ СЃРґРµР»Р°Р»Р° СЌС‚Рѕ, СЂР°СЃСЃС‚СЂРѕРµРЅРЅР°СЏ С‚РµРј, С‡С‚Рѕ РµС‘ СЂР°Р·Р±СѓРґРёР»Рё СЃСЂРµРґРё РЅРѕС‡Рё РёР·-Р·Р° РјРѕС€РµРЅРЅРёС‡РµСЃС‚РІР°. РћРЅР° РѕС‚РєСЂС‹Р»Р° СЃРѕРѕР±С‰РµРЅРёРµ Рё Р·Р°РјРµС‚РёР»Р°, С‡С‚Рѕ РµРіРѕ РїСЂРѕС‡С‚РµРЅРёРµ РЅРµ Р·Р°Р№РјС‘С‚ РјРЅРѕРіРѕ РІСЂРµРјРµРЅРё, РїРѕСЌС‚РѕРјСѓ РѕРЅР° РЅР°С‡Р°Р»Р° С‡РёС‚Р°С‚СЊ, РµС‰С‘ РЅРµ СЃРѕРІСЃРµРј РїСЂРѕСЃРЅСѓРІС€РёСЃСЊ:
 
-«Дорогая Эмма, для меня большая честь объявить, что мы выбрали вас для участия в серии вызовов, связанных с омораши, за возможность выиграть один миллион долларов».
+В«Р”РѕСЂРѕРіР°СЏ Р­РјРјР°, РґР»СЏ РјРµРЅСЏ Р±РѕР»СЊС€Р°СЏ С‡РµСЃС‚СЊ РѕР±СЉСЏРІРёС‚СЊ, С‡С‚Рѕ РјС‹ РІС‹Р±СЂР°Р»Рё РІР°СЃ РґР»СЏ СѓС‡Р°СЃС‚РёСЏ РІ СЃРµСЂРёРё РІС‹Р·РѕРІРѕРІ, СЃРІСЏР·Р°РЅРЅС‹С… СЃ РѕРјРѕСЂР°С€Рё, Р·Р° РІРѕР·РјРѕР¶РЅРѕСЃС‚СЊ РІС‹РёРіСЂР°С‚СЊ РѕРґРёРЅ РјРёР»Р»РёРѕРЅ РґРѕР»Р»Р°СЂРѕРІВ».
 
-В конце первого предложения глаза Эммы расширились, удивлённые содержанием сообщения; они уже знали её имя, но также и её фетиш на омораши, который у неё был несколько лет.
+Р’ РєРѕРЅС†Рµ РїРµСЂРІРѕРіРѕ РїСЂРµРґР»РѕР¶РµРЅРёСЏ РіР»Р°Р·Р° Р­РјРјС‹ СЂР°СЃС€РёСЂРёР»РёСЃСЊ, СѓРґРёРІР»С‘РЅРЅС‹Рµ СЃРѕРґРµСЂР¶Р°РЅРёРµРј СЃРѕРѕР±С‰РµРЅРёСЏ; РѕРЅРё СѓР¶Рµ Р·РЅР°Р»Рё РµС‘ РёРјСЏ, РЅРѕ С‚Р°РєР¶Рµ Рё РµС‘ С„РµС‚РёС€ РЅР° РѕРјРѕСЂР°С€Рё, РєРѕС‚РѕСЂС‹Р№ Сѓ РЅРµС‘ Р±С‹Р» РЅРµСЃРєРѕР»СЊРєРѕ Р»РµС‚.
 
-Как они могли получить доступ к этой информации? Она не помнила, чтобы давала её кому-либо.
+РљР°Рє РѕРЅРё РјРѕРіР»Рё РїРѕР»СѓС‡РёС‚СЊ РґРѕСЃС‚СѓРї Рє СЌС‚РѕР№ РёРЅС„РѕСЂРјР°С†РёРё? РћРЅР° РЅРµ РїРѕРјРЅРёР»Р°, С‡С‚РѕР±С‹ РґР°РІР°Р»Р° РµС‘ РєРѕРјСѓ-Р»РёР±Рѕ.
 
-Придя в себя, она продолжила читать.
+РџСЂРёРґСЏ РІ СЃРµР±СЏ, РѕРЅР° РїСЂРѕРґРѕР»Р¶РёР»Р° С‡РёС‚Р°С‚СЊ.
 
-«Правила просты: выполняйте задания, соблюдая все условия, указанные в задании. Со временем сложность заданий будет увеличиваться. Вы можете остановиться в любой момент, но вы ничего не выиграете. Если у вас есть вопросы, отправляйте их прямо в этой ветке сообщений. В противном случае, если вы готовы начать, отправьте сообщение «Я готова».
+В«РџСЂР°РІРёР»Р° РїСЂРѕСЃС‚С‹: РІС‹РїРѕР»РЅСЏР№С‚Рµ Р·Р°РґР°РЅРёСЏ, СЃРѕР±Р»СЋРґР°СЏ РІСЃРµ СѓСЃР»РѕРІРёСЏ, СѓРєР°Р·Р°РЅРЅС‹Рµ РІ Р·Р°РґР°РЅРёРё. РЎРѕ РІСЂРµРјРµРЅРµРј СЃР»РѕР¶РЅРѕСЃС‚СЊ Р·Р°РґР°РЅРёР№ Р±СѓРґРµС‚ СѓРІРµР»РёС‡РёРІР°С‚СЊСЃСЏ. Р’С‹ РјРѕР¶РµС‚Рµ РѕСЃС‚Р°РЅРѕРІРёС‚СЊСЃСЏ РІ Р»СЋР±РѕР№ РјРѕРјРµРЅС‚, РЅРѕ РІС‹ РЅРёС‡РµРіРѕ РЅРµ РІС‹РёРіСЂР°РµС‚Рµ. Р•СЃР»Рё Сѓ РІР°СЃ РµСЃС‚СЊ РІРѕРїСЂРѕСЃС‹, РѕС‚РїСЂР°РІР»СЏР№С‚Рµ РёС… РїСЂСЏРјРѕ РІ СЌС‚РѕР№ РІРµС‚РєРµ СЃРѕРѕР±С‰РµРЅРёР№. Р’ РїСЂРѕС‚РёРІРЅРѕРј СЃР»СѓС‡Р°Рµ, РµСЃР»Рё РІС‹ РіРѕС‚РѕРІС‹ РЅР°С‡Р°С‚СЊ, РѕС‚РїСЂР°РІСЊС‚Рµ СЃРѕРѕР±С‰РµРЅРёРµ В«РЇ РіРѕС‚РѕРІР°В».
 
-Мозг Эммы действительно был полон вопросов: кто они, какими будут эти задания, и особенно как они могли бы проверить, что она их выполняет? Они что, шпионили за ней?
+РњРѕР·Рі Р­РјРјС‹ РґРµР№СЃС‚РІРёС‚РµР»СЊРЅРѕ Р±С‹Р» РїРѕР»РѕРЅ РІРѕРїСЂРѕСЃРѕРІ: РєС‚Рѕ РѕРЅРё, РєР°РєРёРјРё Р±СѓРґСѓС‚ СЌС‚Рё Р·Р°РґР°РЅРёСЏ, Рё РѕСЃРѕР±РµРЅРЅРѕ РєР°Рє РѕРЅРё РјРѕРіР»Рё Р±С‹ РїСЂРѕРІРµСЂРёС‚СЊ, С‡С‚Рѕ РѕРЅР° РёС… РІС‹РїРѕР»РЅСЏРµС‚? РћРЅРё С‡С‚Рѕ, С€РїРёРѕРЅРёР»Рё Р·Р° РЅРµР№?
 
-Часть её также была взволнована открытием, что она может выиграть миллион долларов, выполнив задания, связанные с омораши, которые она практиковала довольно долго. Эмма подумала о вопросах, которые у неё были в голове, и решила, что лучший способ получить ответы — попробовать; в конце концов, ей нечего было терять. Она лихорадочно печатала на клавиатуре и, наконец, отправила сообщение:
+Р§Р°СЃС‚СЊ РµС‘ С‚Р°РєР¶Рµ Р±С‹Р»Р° РІР·РІРѕР»РЅРѕРІР°РЅР° РѕС‚РєСЂС‹С‚РёРµРј, С‡С‚Рѕ РѕРЅР° РјРѕР¶РµС‚ РІС‹РёРіСЂР°С‚СЊ РјРёР»Р»РёРѕРЅ РґРѕР»Р»Р°СЂРѕРІ, РІС‹РїРѕР»РЅРёРІ Р·Р°РґР°РЅРёСЏ, СЃРІСЏР·Р°РЅРЅС‹Рµ СЃ РѕРјРѕСЂР°С€Рё, РєРѕС‚РѕСЂС‹Рµ РѕРЅР° РїСЂР°РєС‚РёРєРѕРІР°Р»Р° РґРѕРІРѕР»СЊРЅРѕ РґРѕР»РіРѕ. Р­РјРјР° РїРѕРґСѓРјР°Р»Р° Рѕ РІРѕРїСЂРѕСЃР°С…, РєРѕС‚РѕСЂС‹Рµ Сѓ РЅРµС‘ Р±С‹Р»Рё РІ РіРѕР»РѕРІРµ, Рё СЂРµС€РёР»Р°, С‡С‚Рѕ Р»СѓС‡С€РёР№ СЃРїРѕСЃРѕР± РїРѕР»СѓС‡РёС‚СЊ РѕС‚РІРµС‚С‹ вЂ” РїРѕРїСЂРѕР±РѕРІР°С‚СЊ; РІ РєРѕРЅС†Рµ РєРѕРЅС†РѕРІ, РµР№ РЅРµС‡РµРіРѕ Р±С‹Р»Рѕ С‚РµСЂСЏС‚СЊ. РћРЅР° Р»РёС…РѕСЂР°РґРѕС‡РЅРѕ РїРµС‡Р°С‚Р°Р»Р° РЅР° РєР»Р°РІРёР°С‚СѓСЂРµ Рё, РЅР°РєРѕРЅРµС†, РѕС‚РїСЂР°РІРёР»Р° СЃРѕРѕР±С‰РµРЅРёРµ:
 
-«Я готова».
+В«РЇ РіРѕС‚РѕРІР°В».
 
 *001*2024-08-03 22:12
 
-ГЛАВА 2: Первое испытание
+Р“Р›РђР’Рђ 2: РџРµСЂРІРѕРµ РёСЃРїС‹С‚Р°РЅРёРµ
 
-Отправив сообщение, Эмма продолжала смотреть на экран своего телефона, ожидая ответа, но ничего не появилось. Она задавалась вопросом, правильно ли она приняла решение ответить на это сообщение, и быстро заснула, измученная только что полученной информацией.
+РћС‚РїСЂР°РІРёРІ СЃРѕРѕР±С‰РµРЅРёРµ, Р­РјРјР° РїСЂРѕРґРѕР»Р¶Р°Р»Р° СЃРјРѕС‚СЂРµС‚СЊ РЅР° СЌРєСЂР°РЅ СЃРІРѕРµРіРѕ С‚РµР»РµС„РѕРЅР°, РѕР¶РёРґР°СЏ РѕС‚РІРµС‚Р°, РЅРѕ РЅРёС‡РµРіРѕ РЅРµ РїРѕСЏРІРёР»РѕСЃСЊ. РћРЅР° Р·Р°РґР°РІР°Р»Р°СЃСЊ РІРѕРїСЂРѕСЃРѕРј, РїСЂР°РІРёР»СЊРЅРѕ Р»Рё РѕРЅР° РїСЂРёРЅСЏР»Р° СЂРµС€РµРЅРёРµ РѕС‚РІРµС‚РёС‚СЊ РЅР° СЌС‚Рѕ СЃРѕРѕР±С‰РµРЅРёРµ, Рё Р±С‹СЃС‚СЂРѕ Р·Р°СЃРЅСѓР»Р°, РёР·РјСѓС‡РµРЅРЅР°СЏ С‚РѕР»СЊРєРѕ С‡С‚Рѕ РїРѕР»СѓС‡РµРЅРЅРѕР№ РёРЅС„РѕСЂРјР°С†РёРµР№.
 
-Эмма проснулась через несколько часов, медленно встала и взяла телефон, чтобы проверить, не получила ли она какие-либо сообщения от друзей. Но когда она включила телефон, то заметила сообщение от того же отправителя, что и вчера.
+Р­РјРјР° РїСЂРѕСЃРЅСѓР»Р°СЃСЊ С‡РµСЂРµР· РЅРµСЃРєРѕР»СЊРєРѕ С‡Р°СЃРѕРІ, РјРµРґР»РµРЅРЅРѕ РІСЃС‚Р°Р»Р° Рё РІР·СЏР»Р° С‚РµР»РµС„РѕРЅ, С‡С‚РѕР±С‹ РїСЂРѕРІРµСЂРёС‚СЊ, РЅРµ РїРѕР»СѓС‡РёР»Р° Р»Рё РѕРЅР° РєР°РєРёРµ-Р»РёР±Рѕ СЃРѕРѕР±С‰РµРЅРёСЏ РѕС‚ РґСЂСѓР·РµР№. РќРѕ РєРѕРіРґР° РѕРЅР° РІРєР»СЋС‡РёР»Р° С‚РµР»РµС„РѕРЅ, С‚Рѕ Р·Р°РјРµС‚РёР»Р° СЃРѕРѕР±С‰РµРЅРёРµ РѕС‚ С‚РѕРіРѕ Р¶Рµ РѕС‚РїСЂР°РІРёС‚РµР»СЏ, С‡С‚Рѕ Рё РІС‡РµСЂР°.
 
-Испытание всплыло у неё в памяти, как вспышка. Не дожидаясь ответа, она разблокировала телефон и открыла сообщение, которое на этот раз содержало всего две строки:
+РСЃРїС‹С‚Р°РЅРёРµ РІСЃРїР»С‹Р»Рѕ Сѓ РЅРµС‘ РІ РїР°РјСЏС‚Рё, РєР°Рє РІСЃРїС‹С€РєР°. РќРµ РґРѕР¶РёРґР°СЏСЃСЊ РѕС‚РІРµС‚Р°, РѕРЅР° СЂР°Р·Р±Р»РѕРєРёСЂРѕРІР°Р»Р° С‚РµР»РµС„РѕРЅ Рё РѕС‚РєСЂС‹Р»Р° СЃРѕРѕР±С‰РµРЅРёРµ, РєРѕС‚РѕСЂРѕРµ РЅР° СЌС‚РѕС‚ СЂР°Р· СЃРѕРґРµСЂР¶Р°Р»Рѕ РІСЃРµРіРѕ РґРІРµ СЃС‚СЂРѕРєРё:
 
-«Поздравляю с участием в испытании! Испытание номер 1: пописить в туалете».
+В«РџРѕР·РґСЂР°РІР»СЏСЋ СЃ СѓС‡Р°СЃС‚РёРµРј РІ РёСЃРїС‹С‚Р°РЅРёРё! РСЃРїС‹С‚Р°РЅРёРµ РЅРѕРјРµСЂ 1: РїРѕРїРёСЃРёС‚СЊ РІ С‚СѓР°Р»РµС‚РµВ».
 
-Эмма подозревала, что первое испытание будет простым, но настолько простым? Она была почти немного разочарована. Сообщение напомнило ей о её мочевом пузыре, который за ночь наполнился довольно сильно. Обычно она сдерживала утреннюю мочу, но в этот раз она сделает исключение.
+Р­РјРјР° РїРѕРґРѕР·СЂРµРІР°Р»Р°, С‡С‚Рѕ РїРµСЂРІРѕРµ РёСЃРїС‹С‚Р°РЅРёРµ Р±СѓРґРµС‚ РїСЂРѕСЃС‚С‹Рј, РЅРѕ РЅР°СЃС‚РѕР»СЊРєРѕ РїСЂРѕСЃС‚С‹Рј? РћРЅР° Р±С‹Р»Р° РїРѕС‡С‚Рё РЅРµРјРЅРѕРіРѕ СЂР°Р·РѕС‡Р°СЂРѕРІР°РЅР°. РЎРѕРѕР±С‰РµРЅРёРµ РЅР°РїРѕРјРЅРёР»Рѕ РµР№ Рѕ РµС‘ РјРѕС‡РµРІРѕРј РїСѓР·С‹СЂРµ, РєРѕС‚РѕСЂС‹Р№ Р·Р° РЅРѕС‡СЊ РЅР°РїРѕР»РЅРёР»СЃСЏ РґРѕРІРѕР»СЊРЅРѕ СЃРёР»СЊРЅРѕ. РћР±С‹С‡РЅРѕ РѕРЅР° СЃРґРµСЂР¶РёРІР°Р»Р° СѓС‚СЂРµРЅРЅСЋСЋ РјРѕС‡Сѓ, РЅРѕ РІ СЌС‚РѕС‚ СЂР°Р· РѕРЅР° СЃРґРµР»Р°РµС‚ РёСЃРєР»СЋС‡РµРЅРёРµ.
 
-Она направилась в в*нную, сняла пижамные штаны и трусики и села. Вскоре оттуда хлынула мощная струя, и Эмма почувствовала сильное облегчение, хотя ей бы хотелось задержать её немного дольше.
+РћРЅР° РЅР°РїСЂР°РІРёР»Р°СЃСЊ РІ РІ*РЅРЅСѓСЋ, СЃРЅСЏР»Р° РїРёР¶Р°РјРЅС‹Рµ С€С‚Р°РЅС‹ Рё С‚СЂСѓСЃРёРєРё Рё СЃРµР»Р°. Р’СЃРєРѕСЂРµ РѕС‚С‚СѓРґР° С…Р»С‹РЅСѓР»Р° РјРѕС‰РЅР°СЏ СЃС‚СЂСѓСЏ, Рё Р­РјРјР° РїРѕС‡СѓРІСЃС‚РІРѕРІР°Р»Р° СЃРёР»СЊРЅРѕРµ РѕР±Р»РµРіС‡РµРЅРёРµ, С…РѕС‚СЏ РµР№ Р±С‹ С…РѕС‚РµР»РѕСЃСЊ Р·Р°РґРµСЂР¶Р°С‚СЊ РµС‘ РЅРµРјРЅРѕРіРѕ РґРѕР»СЊС€Рµ.
 
-После этого она снова оделась и вернулась в свою комнату, чтобы проверить телефон и убедиться, что вызов был подтверждён. К её большому удивлению, когда она включила телефон, появилось сообщение:
+РџРѕСЃР»Рµ СЌС‚РѕРіРѕ РѕРЅР° СЃРЅРѕРІР° РѕРґРµР»Р°СЃСЊ Рё РІРµСЂРЅСѓР»Р°СЃСЊ РІ СЃРІРѕСЋ РєРѕРјРЅР°С‚Сѓ, С‡С‚РѕР±С‹ РїСЂРѕРІРµСЂРёС‚СЊ С‚РµР»РµС„РѕРЅ Рё СѓР±РµРґРёС‚СЊСЃСЏ, С‡С‚Рѕ РІС‹Р·РѕРІ Р±С‹Р» РїРѕРґС‚РІРµСЂР¶РґС‘РЅ. Рљ РµС‘ Р±РѕР»СЊС€РѕРјСѓ СѓРґРёРІР»РµРЅРёСЋ, РєРѕРіРґР° РѕРЅР° РІРєР»СЋС‡РёР»Р° С‚РµР»РµС„РѕРЅ, РїРѕСЏРІРёР»РѕСЃСЊ СЃРѕРѕР±С‰РµРЅРёРµ:
 
-«Вызов завершён».
+В«Р’С‹Р·РѕРІ Р·Р°РІРµСЂС€С‘РЅВ».
 
-Волна стресса нахлынула на неё, когда она задавалась вопросом, как это возможно, но чувство быстро сменилось волнением от знания следующих вызовов.
+Р’РѕР»РЅР° СЃС‚СЂРµСЃСЃР° РЅР°С…Р»С‹РЅСѓР»Р° РЅР° РЅРµС‘, РєРѕРіРґР° РѕРЅР° Р·Р°РґР°РІР°Р»Р°СЃСЊ РІРѕРїСЂРѕСЃРѕРј, РєР°Рє СЌС‚Рѕ РІРѕР·РјРѕР¶РЅРѕ, РЅРѕ С‡СѓРІСЃС‚РІРѕ Р±С‹СЃС‚СЂРѕ СЃРјРµРЅРёР»РѕСЃСЊ РІРѕР»РЅРµРЅРёРµРј РѕС‚ Р·РЅР°РЅРёСЏ СЃР»РµРґСѓСЋС‰РёС… РІС‹Р·РѕРІРѕРІ.
 
-В 20 лет Эмма открыла для себя омораши два года назад, когда случайно наткнулась на форум, где обсуждалась эта тема. Она сразу же захотела попробовать его и полюбила ощущение сдерживания мочи и, наконец, удовлетворение от опорожнения и намокания одежды. Она пробовала многое, но тот факт, что она всё ещё жила со своими родителями и своей 18-летней сестрой, мешал ей делать всё, что она хотела. Иногда она думала признаться родителям в своём фетише, но её застенчивость всегда сдерживала её.
+Р’ 20 Р»РµС‚ Р­РјРјР° РѕС‚РєСЂС‹Р»Р° РґР»СЏ СЃРµР±СЏ РѕРјРѕСЂР°С€Рё РґРІР° РіРѕРґР° РЅР°Р·Р°Рґ, РєРѕРіРґР° СЃР»СѓС‡Р°Р№РЅРѕ РЅР°С‚РєРЅСѓР»Р°СЃСЊ РЅР° С„РѕСЂСѓРј, РіРґРµ РѕР±СЃСѓР¶РґР°Р»Р°СЃСЊ СЌС‚Р° С‚РµРјР°. РћРЅР° СЃСЂР°Р·Сѓ Р¶Рµ Р·Р°С…РѕС‚РµР»Р° РїРѕРїСЂРѕР±РѕРІР°С‚СЊ РµРіРѕ Рё РїРѕР»СЋР±РёР»Р° РѕС‰СѓС‰РµРЅРёРµ СЃРґРµСЂР¶РёРІР°РЅРёСЏ РјРѕС‡Рё Рё, РЅР°РєРѕРЅРµС†, СѓРґРѕРІР»РµС‚РІРѕСЂРµРЅРёРµ РѕС‚ РѕРїРѕСЂРѕР¶РЅРµРЅРёСЏ Рё РЅР°РјРѕРєР°РЅРёСЏ РѕРґРµР¶РґС‹. РћРЅР° РїСЂРѕР±РѕРІР°Р»Р° РјРЅРѕРіРѕРµ, РЅРѕ С‚РѕС‚ С„Р°РєС‚, С‡С‚Рѕ РѕРЅР° РІСЃС‘ РµС‰С‘ Р¶РёР»Р° СЃРѕ СЃРІРѕРёРјРё СЂРѕРґРёС‚РµР»СЏРјРё Рё СЃРІРѕРµР№ 18-Р»РµС‚РЅРµР№ СЃРµСЃС‚СЂРѕР№, РјРµС€Р°Р» РµР№ РґРµР»Р°С‚СЊ РІСЃС‘, С‡С‚Рѕ РѕРЅР° С…РѕС‚РµР»Р°. РРЅРѕРіРґР° РѕРЅР° РґСѓРјР°Р»Р° РїСЂРёР·РЅР°С‚СЊСЃСЏ СЂРѕРґРёС‚РµР»СЏРј РІ СЃРІРѕС‘Рј С„РµС‚РёС€Рµ, РЅРѕ РµС‘ Р·Р°СЃС‚РµРЅС‡РёРІРѕСЃС‚СЊ РІСЃРµРіРґР° СЃРґРµСЂР¶РёРІР°Р»Р° РµС‘.
 
-Следующий вызов вскоре появился на её телефоне. Она поспешила прочитать его: «Задание номер 2: В следующий раз вы должны пописить в трусики в месте по вашему выбору».
+РЎР»РµРґСѓСЋС‰РёР№ РІС‹Р·РѕРІ РІСЃРєРѕСЂРµ РїРѕСЏРІРёР»СЃСЏ РЅР° РµС‘ С‚РµР»РµС„РѕРЅРµ. РћРЅР° РїРѕСЃРїРµС€РёР»Р° РїСЂРѕС‡РёС‚Р°С‚СЊ РµРіРѕ: В«Р—Р°РґР°РЅРёРµ РЅРѕРјРµСЂ 2: Р’ СЃР»РµРґСѓСЋС‰РёР№ СЂР°Р· РІС‹ РґРѕР»Р¶РЅС‹ РїРѕРїРёСЃРёС‚СЊ РІ С‚СЂСѓСЃРёРєРё РІ РјРµСЃС‚Рµ РїРѕ РІР°С€РµРјСѓ РІС‹Р±РѕСЂСѓВ».
 
-Но на этот раз задание сопровождалось разделом условий: «Условия:
+РќРѕ РЅР° СЌС‚РѕС‚ СЂР°Р· Р·Р°РґР°РЅРёРµ СЃРѕРїСЂРѕРІРѕР¶РґР°Р»РѕСЃСЊ СЂР°Р·РґРµР»РѕРј СѓСЃР»РѕРІРёР№: В«РЈСЃР»РѕРІРёСЏ:
 
-- Не мочиться до 14:00
+- РќРµ РјРѕС‡РёС‚СЊСЃСЏ РґРѕ 14:00
 
-- Выпить 500 мл воды»
+- Р’С‹РїРёС‚СЊ 500 РјР» РІРѕРґС‹В»
 
-На этот раз Эмма почувствовала, как её сердце забилось быстрее, когда она прочитала задание. Это был не первый раз, когда она пописила в трусики, но тот факт, что, начиная со второго задания, ей пришлось пить воду и удерживать её до 14:00, беспокоил её о том, какими будут следующие задания, если это будет считаться простым.
+РќР° СЌС‚РѕС‚ СЂР°Р· Р­РјРјР° РїРѕС‡СѓРІСЃС‚РІРѕРІР°Р»Р°, РєР°Рє РµС‘ СЃРµСЂРґС†Рµ Р·Р°Р±РёР»РѕСЃСЊ Р±С‹СЃС‚СЂРµРµ, РєРѕРіРґР° РѕРЅР° РїСЂРѕС‡РёС‚Р°Р»Р° Р·Р°РґР°РЅРёРµ. Р­С‚Рѕ Р±С‹Р» РЅРµ РїРµСЂРІС‹Р№ СЂР°Р·, РєРѕРіРґР° РѕРЅР° РїРѕРїРёСЃРёР»Р° РІ С‚СЂСѓСЃРёРєРё, РЅРѕ С‚РѕС‚ С„Р°РєС‚, С‡С‚Рѕ, РЅР°С‡РёРЅР°СЏ СЃРѕ РІС‚РѕСЂРѕРіРѕ Р·Р°РґР°РЅРёСЏ, РµР№ РїСЂРёС€Р»РѕСЃСЊ РїРёС‚СЊ РІРѕРґСѓ Рё СѓРґРµСЂР¶РёРІР°С‚СЊ РµС‘ РґРѕ 14:00, Р±РµСЃРїРѕРєРѕРёР» РµС‘ Рѕ С‚РѕРј, РєР°РєРёРјРё Р±СѓРґСѓС‚ СЃР»РµРґСѓСЋС‰РёРµ Р·Р°РґР°РЅРёСЏ, РµСЃР»Рё СЌС‚Рѕ Р±СѓРґРµС‚ СЃС‡РёС‚Р°С‚СЊСЃСЏ РїСЂРѕСЃС‚С‹Рј.
 
-Эмма быстро направилась на кухню, чтобы выпить необходимое количество воды. Эмма проверила время и увидела, что было почти 10 утра, так что ей придётся удерживать его в течение 4 часов, хотя в данный момент она не чувствовала никакого давления в мочевом пузыре.
+Р­РјРјР° Р±С‹СЃС‚СЂРѕ РЅР°РїСЂР°РІРёР»Р°СЃСЊ РЅР° РєСѓС…РЅСЋ, С‡С‚РѕР±С‹ РІС‹РїРёС‚СЊ РЅРµРѕР±С…РѕРґРёРјРѕРµ РєРѕР»РёС‡РµСЃС‚РІРѕ РІРѕРґС‹. Р­РјРјР° РїСЂРѕРІРµСЂРёР»Р° РІСЂРµРјСЏ Рё СѓРІРёРґРµР»Р°, С‡С‚Рѕ Р±С‹Р»Рѕ РїРѕС‡С‚Рё 10 СѓС‚СЂР°, С‚Р°Рє С‡С‚Рѕ РµР№ РїСЂРёРґС‘С‚СЃСЏ СѓРґРµСЂР¶РёРІР°С‚СЊ РµРіРѕ РІ С‚РµС‡РµРЅРёРµ 4 С‡Р°СЃРѕРІ, С…РѕС‚СЏ РІ РґР°РЅРЅС‹Р№ РјРѕРјРµРЅС‚ РѕРЅР° РЅРµ С‡СѓРІСЃС‚РІРѕРІР°Р»Р° РЅРёРєР°РєРѕРіРѕ РґР°РІР»РµРЅРёСЏ РІ РјРѕС‡РµРІРѕРј РїСѓР·С‹СЂРµ.
 
