--- a/noone11/101639-yuumas-day-of-desperation/rus.textile
+++ b/noone11/101639-yuumas-day-of-desperation/rus.textile
@@ -1,70 +1,70 @@
-День отчаяния Юмы
+Р”РµРЅСЊ РѕС‚С‡Р°СЏРЅРёСЏ Р®РјС‹
 
-Автор: noone11
+РђРІС‚РѕСЂ: noone11
 
 *000*2024-06-03 23:59
 
-Это моя первая история омораши. Изначально я написала её только для себя, так что извините, если она плохо написана или аудитория слишком специфична… 
+Р­С‚Рѕ РјРѕСЏ РїРµСЂРІР°СЏ РёСЃС‚РѕСЂРёСЏ РѕРјРѕСЂР°С€Рё. РР·РЅР°С‡Р°Р»СЊРЅРѕ СЏ РЅР°РїРёСЃР°Р»Р° РµС‘ С‚РѕР»СЊРєРѕ РґР»СЏ СЃРµР±СЏ, С‚Р°Рє С‡С‚Рѕ РёР·РІРёРЅРёС‚Рµ, РµСЃР»Рё РѕРЅР° РїР»РѕС…Рѕ РЅР°РїРёСЃР°РЅР° РёР»Рё Р°СѓРґРёС‚РѕСЂРёСЏ СЃР»РёС€РєРѕРј СЃРїРµС†РёС„РёС‡РЅР°вЂ¦ 
 
-Юму можно было назвать «красивым мальчиком» с его пушистыми чёрными волосами, безупречной бледной кожей, тёмными глазами лани и худым, но стройным телом.
+Р®РјСѓ РјРѕР¶РЅРѕ Р±С‹Р»Рѕ РЅР°Р·РІР°С‚СЊ В«РєСЂР°СЃРёРІС‹Рј РјР°Р»СЊС‡РёРєРѕРјВ» СЃ РµРіРѕ РїСѓС€РёСЃС‚С‹РјРё С‡С‘СЂРЅС‹РјРё РІРѕР»РѕСЃР°РјРё, Р±РµР·СѓРїСЂРµС‡РЅРѕР№ Р±Р»РµРґРЅРѕР№ РєРѕР¶РµР№, С‚С‘РјРЅС‹РјРё РіР»Р°Р·Р°РјРё Р»Р°РЅРё Рё С…СѓРґС‹Рј, РЅРѕ СЃС‚СЂРѕР№РЅС‹Рј С‚РµР»РѕРј.
 
-К несчастью для него, его плохое финансовое положение привело к тому, что он стал делать откровенный контент, чтобы свести концы с концами. У него не было особого выбора. Родители выгнали его, как только ему исполнилось 18, и он хотел пойти в колледж и найти приличную работу. Конечно, он мог устроиться на неполный рабочий день и взять студенческие кредиты, но он не хотел никаких долгов. Поэтому его следующим лучшим решением было использовать свою внешность в своих интересах. (Или, по крайней мере, таков был его ход мыслей)
+Рљ РЅРµСЃС‡Р°СЃС‚СЊСЋ РґР»СЏ РЅРµРіРѕ, РµРіРѕ РїР»РѕС…РѕРµ С„РёРЅР°РЅСЃРѕРІРѕРµ РїРѕР»РѕР¶РµРЅРёРµ РїСЂРёРІРµР»Рѕ Рє С‚РѕРјСѓ, С‡С‚Рѕ РѕРЅ СЃС‚Р°Р» РґРµР»Р°С‚СЊ РѕС‚РєСЂРѕРІРµРЅРЅС‹Р№ РєРѕРЅС‚РµРЅС‚, С‡С‚РѕР±С‹ СЃРІРµСЃС‚Рё РєРѕРЅС†С‹ СЃ РєРѕРЅС†Р°РјРё. РЈ РЅРµРіРѕ РЅРµ Р±С‹Р»Рѕ РѕСЃРѕР±РѕРіРѕ РІС‹Р±РѕСЂР°. Р РѕРґРёС‚РµР»Рё РІС‹РіРЅР°Р»Рё РµРіРѕ, РєР°Рє С‚РѕР»СЊРєРѕ РµРјСѓ РёСЃРїРѕР»РЅРёР»РѕСЃСЊ 18, Рё РѕРЅ С…РѕС‚РµР» РїРѕР№С‚Рё РІ РєРѕР»Р»РµРґР¶ Рё РЅР°Р№С‚Рё РїСЂРёР»РёС‡РЅСѓСЋ СЂР°Р±РѕС‚Сѓ. РљРѕРЅРµС‡РЅРѕ, РѕРЅ РјРѕРі СѓСЃС‚СЂРѕРёС‚СЊСЃСЏ РЅР° РЅРµРїРѕР»РЅС‹Р№ СЂР°Р±РѕС‡РёР№ РґРµРЅСЊ Рё РІР·СЏС‚СЊ СЃС‚СѓРґРµРЅС‡РµСЃРєРёРµ РєСЂРµРґРёС‚С‹, РЅРѕ РѕРЅ РЅРµ С…РѕС‚РµР» РЅРёРєР°РєРёС… РґРѕР»РіРѕРІ. РџРѕСЌС‚РѕРјСѓ РµРіРѕ СЃР»РµРґСѓСЋС‰РёРј Р»СѓС‡С€РёРј СЂРµС€РµРЅРёРµРј Р±С‹Р»Рѕ РёСЃРїРѕР»СЊР·РѕРІР°С‚СЊ СЃРІРѕСЋ РІРЅРµС€РЅРѕСЃС‚СЊ РІ СЃРІРѕРёС… РёРЅС‚РµСЂРµСЃР°С…. (РР»Рё, РїРѕ РєСЂР°Р№РЅРµР№ РјРµСЂРµ, С‚Р°РєРѕРІ Р±С‹Р» РµРіРѕ С…РѕРґ РјС‹СЃР»РµР№)
 
-Не то чтобы он ненавидел это делать. Если уж на то пошло, ему это даже нравилось иногда… и это приводит нас к сегодняшней истории.
+РќРµ С‚Рѕ С‡С‚РѕР±С‹ РѕРЅ РЅРµРЅР°РІРёРґРµР» СЌС‚Рѕ РґРµР»Р°С‚СЊ. Р•СЃР»Рё СѓР¶ РЅР° С‚Рѕ РїРѕС€Р»Рѕ, РµРјСѓ СЌС‚Рѕ РґР°Р¶Рµ РЅСЂР°РІРёР»РѕСЃСЊ РёРЅРѕРіРґР°вЂ¦ Рё СЌС‚Рѕ РїСЂРёРІРѕРґРёС‚ РЅР°СЃ Рє СЃРµРіРѕРґРЅСЏС€РЅРµР№ РёСЃС‚РѕСЂРёРё.
 
-Один мужчина обратился с… довольно уникальной просьбой. Он хотел, чтобы Юма держал его как можно дольше, отправлял ему обновления и, наконец, видео с релизом. Конечно, он щедро заплатит Юме. Но была одна маленькая загвоздка. Он попросил, чтобы Юма пописил хотя бы одну минуту.
+РћРґРёРЅ РјСѓР¶С‡РёРЅР° РѕР±СЂР°С‚РёР»СЃСЏ СЃвЂ¦ РґРѕРІРѕР»СЊРЅРѕ СѓРЅРёРєР°Р»СЊРЅРѕР№ РїСЂРѕСЃСЊР±РѕР№. РћРЅ С…РѕС‚РµР», С‡С‚РѕР±С‹ Р®РјР° РґРµСЂР¶Р°Р» РµРіРѕ РєР°Рє РјРѕР¶РЅРѕ РґРѕР»СЊС€Рµ, РѕС‚РїСЂР°РІР»СЏР» РµРјСѓ РѕР±РЅРѕРІР»РµРЅРёСЏ Рё, РЅР°РєРѕРЅРµС†, РІРёРґРµРѕ СЃ СЂРµР»РёР·РѕРј. РљРѕРЅРµС‡РЅРѕ, РѕРЅ С‰РµРґСЂРѕ Р·Р°РїР»Р°С‚РёС‚ Р®РјРµ. РќРѕ Р±С‹Р»Р° РѕРґРЅР° РјР°Р»РµРЅСЊРєР°СЏ Р·Р°РіРІРѕР·РґРєР°. РћРЅ РїРѕРїСЂРѕСЃРёР», С‡С‚РѕР±С‹ Р®РјР° РїРѕРїРёСЃРёР» С…РѕС‚СЏ Р±С‹ РѕРґРЅСѓ РјРёРЅСѓС‚Сѓ.
 
-«Какого чёрта?!» — подумал Юма. «Возможно ли это вообще или кто-то может так долго??? Я так не думаю… всё же, я не могу отказаться от суммы, которую он мне платит… — он на мгновение задумался. — Думаю, мне придётся постараться изо всех сил. Он начал с того, что выпил несколько чашек чая, внимательно отслеживая количество. Он решил отправить клиенту первое обновление.
+В«РљР°РєРѕРіРѕ С‡С‘СЂС‚Р°?!В» вЂ” РїРѕРґСѓРјР°Р» Р®РјР°. В«Р’РѕР·РјРѕР¶РЅРѕ Р»Рё СЌС‚Рѕ РІРѕРѕР±С‰Рµ РёР»Рё РєС‚Рѕ-С‚Рѕ РјРѕР¶РµС‚ С‚Р°Рє РґРѕР»РіРѕ??? РЇ С‚Р°Рє РЅРµ РґСѓРјР°СЋвЂ¦ РІСЃС‘ Р¶Рµ, СЏ РЅРµ РјРѕРіСѓ РѕС‚РєР°Р·Р°С‚СЊСЃСЏ РѕС‚ СЃСѓРјРјС‹, РєРѕС‚РѕСЂСѓСЋ РѕРЅ РјРЅРµ РїР»Р°С‚РёС‚вЂ¦ вЂ” РѕРЅ РЅР° РјРіРЅРѕРІРµРЅРёРµ Р·Р°РґСѓРјР°Р»СЃСЏ. вЂ” Р”СѓРјР°СЋ, РјРЅРµ РїСЂРёРґС‘С‚СЃСЏ РїРѕСЃС‚Р°СЂР°С‚СЊСЃСЏ РёР·Рѕ РІСЃРµС… СЃРёР». РћРЅ РЅР°С‡Р°Р» СЃ С‚РѕРіРѕ, С‡С‚Рѕ РІС‹РїРёР» РЅРµСЃРєРѕР»СЊРєРѕ С‡Р°С€РµРє С‡Р°СЏ, РІРЅРёРјР°С‚РµР»СЊРЅРѕ РѕС‚СЃР»РµР¶РёРІР°СЏ РєРѕР»РёС‡РµСЃС‚РІРѕ. РћРЅ СЂРµС€РёР» РѕС‚РїСЂР°РІРёС‚СЊ РєР»РёРµРЅС‚Сѓ РїРµСЂРІРѕРµ РѕР±РЅРѕРІР»РµРЅРёРµ.
 
-Выпил около полулитра чая, ожидая, пока он выпьет.
+Р’С‹РїРёР» РѕРєРѕР»Рѕ РїРѕР»СѓР»РёС‚СЂР° С‡Р°СЏ, РѕР¶РёРґР°СЏ, РїРѕРєР° РѕРЅ РІС‹РїСЊРµС‚.
 
-Это немного, можешь ещё хотя бы 2 литра?
+Р­С‚Рѕ РЅРµРјРЅРѕРіРѕ, РјРѕР¶РµС€СЊ РµС‰С‘ С…РѕС‚СЏ Р±С‹ 2 Р»РёС‚СЂР°?
 
-Он надулся: «А, серьёзно?! Отлично, раз он мне так хорошо платит».
+РћРЅ РЅР°РґСѓР»СЃСЏ: В«Рђ, СЃРµСЂСЊС‘Р·РЅРѕ?! РћС‚Р»РёС‡РЅРѕ, СЂР°Р· РѕРЅ РјРЅРµ С‚Р°Рє С…РѕСЂРѕС€Рѕ РїР»Р°С‚РёС‚В».
 
-Юма наполнил свой большой кувшин водой и заставил себя выпить её всю. К концу он сильно раздулся, и потёр живот, чтобы облегчить боль, пока ждал, пока вода выпьет. Прошло несколько минут, потом ещё несколько, а потом ещё больше. «Сколько это займёт времени? Я пока совсем не чувствую отчаяния… — вздохнул он. — Ну, если это займёт так много времени, я пока что сделаю покупки.
+Р®РјР° РЅР°РїРѕР»РЅРёР» СЃРІРѕР№ Р±РѕР»СЊС€РѕР№ РєСѓРІС€РёРЅ РІРѕРґРѕР№ Рё Р·Р°СЃС‚Р°РІРёР» СЃРµР±СЏ РІС‹РїРёС‚СЊ РµС‘ РІСЃСЋ. Рљ РєРѕРЅС†Сѓ РѕРЅ СЃРёР»СЊРЅРѕ СЂР°Р·РґСѓР»СЃСЏ, Рё РїРѕС‚С‘СЂ Р¶РёРІРѕС‚, С‡С‚РѕР±С‹ РѕР±Р»РµРіС‡РёС‚СЊ Р±РѕР»СЊ, РїРѕРєР° Р¶РґР°Р», РїРѕРєР° РІРѕРґР° РІС‹РїСЊРµС‚. РџСЂРѕС€Р»Рѕ РЅРµСЃРєРѕР»СЊРєРѕ РјРёРЅСѓС‚, РїРѕС‚РѕРј РµС‰С‘ РЅРµСЃРєРѕР»СЊРєРѕ, Р° РїРѕС‚РѕРј РµС‰С‘ Р±РѕР»СЊС€Рµ. В«РЎРєРѕР»СЊРєРѕ СЌС‚Рѕ Р·Р°Р№РјС‘С‚ РІСЂРµРјРµРЅРё? РЇ РїРѕРєР° СЃРѕРІСЃРµРј РЅРµ С‡СѓРІСЃС‚РІСѓСЋ РѕС‚С‡Р°СЏРЅРёСЏвЂ¦ вЂ” РІР·РґРѕС…РЅСѓР» РѕРЅ. вЂ” РќСѓ, РµСЃР»Рё СЌС‚Рѕ Р·Р°Р№РјС‘С‚ С‚Р°Рє РјРЅРѕРіРѕ РІСЂРµРјРµРЅРё, СЏ РїРѕРєР° С‡С‚Рѕ СЃРґРµР»Р°СЋ РїРѕРєСѓРїРєРё.
 
-Он потратил около часа на покупку необходимых вещей, прежде чем сделать последнюю остановку в торговом центре, где планировал купить симпатичное нижнее бельё для своих клиентов. Он выбрал чёрное с кружевом, которое подчёркивало его пухлую попу и тонкую талию, прежде чем направиться к машине.
+РћРЅ РїРѕС‚СЂР°С‚РёР» РѕРєРѕР»Рѕ С‡Р°СЃР° РЅР° РїРѕРєСѓРїРєСѓ РЅРµРѕР±С…РѕРґРёРјС‹С… РІРµС‰РµР№, РїСЂРµР¶РґРµ С‡РµРј СЃРґРµР»Р°С‚СЊ РїРѕСЃР»РµРґРЅСЋСЋ РѕСЃС‚Р°РЅРѕРІРєСѓ РІ С‚РѕСЂРіРѕРІРѕРј С†РµРЅС‚СЂРµ, РіРґРµ РїР»Р°РЅРёСЂРѕРІР°Р» РєСѓРїРёС‚СЊ СЃРёРјРїР°С‚РёС‡РЅРѕРµ РЅРёР¶РЅРµРµ Р±РµР»СЊС‘ РґР»СЏ СЃРІРѕРёС… РєР»РёРµРЅС‚РѕРІ. РћРЅ РІС‹Р±СЂР°Р» С‡С‘СЂРЅРѕРµ СЃ РєСЂСѓР¶РµРІРѕРј, РєРѕС‚РѕСЂРѕРµ РїРѕРґС‡С‘СЂРєРёРІР°Р»Рѕ РµРіРѕ РїСѓС…Р»СѓСЋ РїРѕРїСѓ Рё С‚РѕРЅРєСѓСЋ С‚Р°Р»РёСЋ, РїСЂРµР¶РґРµ С‡РµРј РЅР°РїСЂР°РІРёС‚СЊСЃСЏ Рє РјР°С€РёРЅРµ.
 
-Когда он сел, на него обрушилась огромная волна давления, заставившая его схватиться за промежность и немного затрястись. К счастью, волна быстро утихла.
+РљРѕРіРґР° РѕРЅ СЃРµР», РЅР° РЅРµРіРѕ РѕР±СЂСѓС€РёР»Р°СЃСЊ РѕРіСЂРѕРјРЅР°СЏ РІРѕР»РЅР° РґР°РІР»РµРЅРёСЏ, Р·Р°СЃС‚Р°РІРёРІС€Р°СЏ РµРіРѕ СЃС…РІР°С‚РёС‚СЊСЃСЏ Р·Р° РїСЂРѕРјРµР¶РЅРѕСЃС‚СЊ Рё РЅРµРјРЅРѕРіРѕ Р·Р°С‚СЂСЏСЃС‚РёСЃСЊ. Рљ СЃС‡Р°СЃС‚СЊСЋ, РІРѕР»РЅР° Р±С‹СЃС‚СЂРѕ СѓС‚РёС…Р»Р°.
 
-«Чёрт, мне правда пора… надеюсь, он отпустит меня, когда я приду домой…»
+В«Р§С‘СЂС‚, РјРЅРµ РїСЂР°РІРґР° РїРѕСЂР°вЂ¦ РЅР°РґРµСЋСЃСЊ, РѕРЅ РѕС‚РїСѓСЃС‚РёС‚ РјРµРЅСЏ, РєРѕРіРґР° СЏ РїСЂРёРґСѓ РґРѕРјРѕР№вЂ¦В»
 
-Дома он решил примерить новое нижнее бельё. Он разделся и оглядел себя. Он заметил небольшую шишку, выступающую из нижней части живота. «Это мой мочевой пузырь? Я не знал, что это может быть так заметно… Мне стоит отправить фотографию клиенту»
+Р”РѕРјР° РѕРЅ СЂРµС€РёР» РїСЂРёРјРµСЂРёС‚СЊ РЅРѕРІРѕРµ РЅРёР¶РЅРµРµ Р±РµР»СЊС‘. РћРЅ СЂР°Р·РґРµР»СЃСЏ Рё РѕРіР»СЏРґРµР» СЃРµР±СЏ. РћРЅ Р·Р°РјРµС‚РёР» РЅРµР±РѕР»СЊС€СѓСЋ С€РёС€РєСѓ, РІС‹СЃС‚СѓРїР°СЋС‰СѓСЋ РёР· РЅРёР¶РЅРµР№ С‡Р°СЃС‚Рё Р¶РёРІРѕС‚Р°. В«Р­С‚Рѕ РјРѕР№ РјРѕС‡РµРІРѕР№ РїСѓР·С‹СЂСЊ? РЇ РЅРµ Р·РЅР°Р», С‡С‚Рѕ СЌС‚Рѕ РјРѕР¶РµС‚ Р±С‹С‚СЊ С‚Р°Рє Р·Р°РјРµС‚РЅРѕвЂ¦ РњРЅРµ СЃС‚РѕРёС‚ РѕС‚РїСЂР°РІРёС‚СЊ С„РѕС‚РѕРіСЂР°С„РёСЋ РєР»РёРµРЅС‚СѓВ»
 
-Он надел нижнее бельё, прежде чем сделать снимок. Чёрное кружево идеально облегает его выпирающую талию.
+РћРЅ РЅР°РґРµР» РЅРёР¶РЅРµРµ Р±РµР»СЊС‘, РїСЂРµР¶РґРµ С‡РµРј СЃРґРµР»Р°С‚СЊ СЃРЅРёРјРѕРє. Р§С‘СЂРЅРѕРµ РєСЂСѓР¶РµРІРѕ РёРґРµР°Р»СЊРЅРѕ РѕР±Р»РµРіР°РµС‚ РµРіРѕ РІС‹РїРёСЂР°СЋС‰СѓСЋ С‚Р°Р»РёСЋ.
 
-Это хорошо? Я достаточно полон для тебя?
+Р­С‚Рѕ С…РѕСЂРѕС€Рѕ? РЇ РґРѕСЃС‚Р°С‚РѕС‡РЅРѕ РїРѕР»РѕРЅ РґР»СЏ С‚РµР±СЏ?
 
-Нет… не совсем, я действительно много плачу, так что… ты можешь вместить больше, верно?
+РќРµС‚вЂ¦ РЅРµ СЃРѕРІСЃРµРј, СЏ РґРµР№СЃС‚РІРёС‚РµР»СЊРЅРѕ РјРЅРѕРіРѕ РїР»Р°С‡Сѓ, С‚Р°Рє С‡С‚РѕвЂ¦ С‚С‹ РјРѕР¶РµС€СЊ РІРјРµСЃС‚РёС‚СЊ Р±РѕР»СЊС€Рµ, РІРµСЂРЅРѕ?
 
-Да, конечно!
+Р”Р°, РєРѕРЅРµС‡РЅРѕ!
 
-«Этот парень сошёл с ума? Он хочет, чтобы я лопнул?» Тем не менее, он не мог сказать «нет», поэтому неохотно согласился. Он выпил литр сока для ровного счёта.
+В«Р­С‚РѕС‚ РїР°СЂРµРЅСЊ СЃРѕС€С‘Р» СЃ СѓРјР°? РћРЅ С…РѕС‡РµС‚, С‡С‚РѕР±С‹ СЏ Р»РѕРїРЅСѓР»?В» РўРµРј РЅРµ РјРµРЅРµРµ, РѕРЅ РЅРµ РјРѕРі СЃРєР°Р·Р°С‚СЊ В«РЅРµС‚В», РїРѕСЌС‚РѕРјСѓ РЅРµРѕС…РѕС‚РЅРѕ СЃРѕРіР»Р°СЃРёР»СЃСЏ. РћРЅ РІС‹РїРёР» Р»РёС‚СЂ СЃРѕРєР° РґР»СЏ СЂРѕРІРЅРѕРіРѕ СЃС‡С‘С‚Р°.
 
-Он наблюдал, как его выпуклость становится всё больше и больше, надавливая на чёрное кружево его наряда. Давление становилось всё сильнее, он держал его уже несколько часов. Он чувствовал, как все жидкости, которые он выпил, медленно заставляют его бедный мочевой пузырь растягиваться всё больше и больше. «Я должен признать, это довольно приятно…»
+РћРЅ РЅР°Р±Р»СЋРґР°Р», РєР°Рє РµРіРѕ РІС‹РїСѓРєР»РѕСЃС‚СЊ СЃС‚Р°РЅРѕРІРёС‚СЃСЏ РІСЃС‘ Р±РѕР»СЊС€Рµ Рё Р±РѕР»СЊС€Рµ, РЅР°РґР°РІР»РёРІР°СЏ РЅР° С‡С‘СЂРЅРѕРµ РєСЂСѓР¶РµРІРѕ РµРіРѕ РЅР°СЂСЏРґР°. Р”Р°РІР»РµРЅРёРµ СЃС‚Р°РЅРѕРІРёР»РѕСЃСЊ РІСЃС‘ СЃРёР»СЊРЅРµРµ, РѕРЅ РґРµСЂР¶Р°Р» РµРіРѕ СѓР¶Рµ РЅРµСЃРєРѕР»СЊРєРѕ С‡Р°СЃРѕРІ. РћРЅ С‡СѓРІСЃС‚РІРѕРІР°Р», РєР°Рє РІСЃРµ Р¶РёРґРєРѕСЃС‚Рё, РєРѕС‚РѕСЂС‹Рµ РѕРЅ РІС‹РїРёР», РјРµРґР»РµРЅРЅРѕ Р·Р°СЃС‚Р°РІР»СЏСЋС‚ РµРіРѕ Р±РµРґРЅС‹Р№ РјРѕС‡РµРІРѕР№ РїСѓР·С‹СЂСЊ СЂР°СЃС‚СЏРіРёРІР°С‚СЊСЃСЏ РІСЃС‘ Р±РѕР»СЊС€Рµ Рё Р±РѕР»СЊС€Рµ. В«РЇ РґРѕР»Р¶РµРЅ РїСЂРёР·РЅР°С‚СЊ, СЌС‚Рѕ РґРѕРІРѕР»СЊРЅРѕ РїСЂРёСЏС‚РЅРѕвЂ¦В»
 
-Затем, после того, как он немного потёрся, огромная волна давления прошла по его телу, ощущение было почти оргазмическим. Он издал громкий стон, когда его мочевой пузырь ныл от нетерпения. «Чёрт, не думаю, что смогу долго сдерживаться… лучше отправь ещё одно сообщение». Он сделал ещё одно фото своей выпуклости на всякий случай.
+Р—Р°С‚РµРј, РїРѕСЃР»Рµ С‚РѕРіРѕ, РєР°Рє РѕРЅ РЅРµРјРЅРѕРіРѕ РїРѕС‚С‘СЂСЃСЏ, РѕРіСЂРѕРјРЅР°СЏ РІРѕР»РЅР° РґР°РІР»РµРЅРёСЏ РїСЂРѕС€Р»Р° РїРѕ РµРіРѕ С‚РµР»Сѓ, РѕС‰СѓС‰РµРЅРёРµ Р±С‹Р»Рѕ РїРѕС‡С‚Рё РѕСЂРіР°Р·РјРёС‡РµСЃРєРёРј. РћРЅ РёР·РґР°Р» РіСЂРѕРјРєРёР№ СЃС‚РѕРЅ, РєРѕРіРґР° РµРіРѕ РјРѕС‡РµРІРѕР№ РїСѓР·С‹СЂСЊ РЅС‹Р» РѕС‚ РЅРµС‚РµСЂРїРµРЅРёСЏ. В«Р§С‘СЂС‚, РЅРµ РґСѓРјР°СЋ, С‡С‚Рѕ СЃРјРѕРіСѓ РґРѕР»РіРѕ СЃРґРµСЂР¶РёРІР°С‚СЊСЃСЏвЂ¦ Р»СѓС‡С€Рµ РѕС‚РїСЂР°РІСЊ РµС‰С‘ РѕРґРЅРѕ СЃРѕРѕР±С‰РµРЅРёРµВ». РћРЅ СЃРґРµР»Р°Р» РµС‰С‘ РѕРґРЅРѕ С„РѕС‚Рѕ СЃРІРѕРµР№ РІС‹РїСѓРєР»РѕСЃС‚Рё РЅР° РІСЃСЏРєРёР№ СЃР»СѓС‡Р°Р№.
 
-Как это? Достаточно большой? Мне правда нужно идти сейчас…
+РљР°Рє СЌС‚Рѕ? Р”РѕСЃС‚Р°С‚РѕС‡РЅРѕ Р±РѕР»СЊС€РѕР№? РњРЅРµ РїСЂР°РІРґР° РЅСѓР¶РЅРѕ РёРґС‚Рё СЃРµР№С‡Р°СЃвЂ¦
 
-Если ты можешь написать мне, ты всё равно сможешь сдерживаться, верно? Я заплачу дополнительно, если будешь сдерживаться всю ночь.
+Р•СЃР»Рё С‚С‹ РјРѕР¶РµС€СЊ РЅР°РїРёСЃР°С‚СЊ РјРЅРµ, С‚С‹ РІСЃС‘ СЂР°РІРЅРѕ СЃРјРѕР¶РµС€СЊ СЃРґРµСЂР¶РёРІР°С‚СЊСЃСЏ, РІРµСЂРЅРѕ? РЇ Р·Р°РїР»Р°С‡Сѓ РґРѕРїРѕР»РЅРёС‚РµР»СЊРЅРѕ, РµСЃР»Рё Р±СѓРґРµС€СЊ СЃРґРµСЂР¶РёРІР°С‚СЊСЃСЏ РІСЃСЋ РЅРѕС‡СЊ.
 
-Ладно, я попробую…
+Р›Р°РґРЅРѕ, СЏ РїРѕРїСЂРѕР±СѓСЋвЂ¦
 
-Юма не знал, сможет ли он, но он не собирался отказываться от денег ни за что. Он выпил последние несколько чашек и лёг спать на ночь.
+Р®РјР° РЅРµ Р·РЅР°Р», СЃРјРѕР¶РµС‚ Р»Рё РѕРЅ, РЅРѕ РѕРЅ РЅРµ СЃРѕР±РёСЂР°Р»СЃСЏ РѕС‚РєР°Р·С‹РІР°С‚СЊСЃСЏ РѕС‚ РґРµРЅРµРі РЅРё Р·Р° С‡С‚Рѕ. РћРЅ РІС‹РїРёР» РїРѕСЃР»РµРґРЅРёРµ РЅРµСЃРєРѕР»СЊРєРѕ С‡Р°С€РµРє Рё Р»С‘Рі СЃРїР°С‚СЊ РЅР° РЅРѕС‡СЊ.
 
-Проснувшись на следующее утро, он почувствовал давление. Прошло около 16 часов с тех пор, как он последний раз облегчался, и он выпил огромное количество жидкости. Его мочевой пузырь был почти как баскетбольный мяч.
+РџСЂРѕСЃРЅСѓРІС€РёСЃСЊ РЅР° СЃР»РµРґСѓСЋС‰РµРµ СѓС‚СЂРѕ, РѕРЅ РїРѕС‡СѓРІСЃС‚РІРѕРІР°Р» РґР°РІР»РµРЅРёРµ. РџСЂРѕС€Р»Рѕ РѕРєРѕР»Рѕ 16 С‡Р°СЃРѕРІ СЃ С‚РµС… РїРѕСЂ, РєР°Рє РѕРЅ РїРѕСЃР»РµРґРЅРёР№ СЂР°Р· РѕР±Р»РµРіС‡Р°Р»СЃСЏ, Рё РѕРЅ РІС‹РїРёР» РѕРіСЂРѕРјРЅРѕРµ РєРѕР»РёС‡РµСЃС‚РІРѕ Р¶РёРґРєРѕСЃС‚Рё. Р•РіРѕ РјРѕС‡РµРІРѕР№ РїСѓР·С‹СЂСЊ Р±С‹Р» РїРѕС‡С‚Рё РєР°Рє Р±Р°СЃРєРµС‚Р±РѕР»СЊРЅС‹Р№ РјСЏС‡.
 
-«Боже, какой я огромный… во мне так много всего», — он бы солгал, сказав, что не испытывает ни капли удовольствия от огромного количества мочи, которое он держал. «Ну, думаю, это новый фетиш для меня». Он быстро сел, мгновенно поняв, что сделать это было ужасным решением.
+В«Р‘РѕР¶Рµ, РєР°РєРѕР№ СЏ РѕРіСЂРѕРјРЅС‹Р№вЂ¦ РІРѕ РјРЅРµ С‚Р°Рє РјРЅРѕРіРѕ РІСЃРµРіРѕВ», вЂ” РѕРЅ Р±С‹ СЃРѕР»РіР°Р», СЃРєР°Р·Р°РІ, С‡С‚Рѕ РЅРµ РёСЃРїС‹С‚С‹РІР°РµС‚ РЅРё РєР°РїР»Рё СѓРґРѕРІРѕР»СЊСЃС‚РІРёСЏ РѕС‚ РѕРіСЂРѕРјРЅРѕРіРѕ РєРѕР»РёС‡РµСЃС‚РІР° РјРѕС‡Рё, РєРѕС‚РѕСЂРѕРµ РѕРЅ РґРµСЂР¶Р°Р». В«РќСѓ, РґСѓРјР°СЋ, СЌС‚Рѕ РЅРѕРІС‹Р№ С„РµС‚РёС€ РґР»СЏ РјРµРЅСЏВ». РћРЅ Р±С‹СЃС‚СЂРѕ СЃРµР», РјРіРЅРѕРІРµРЅРЅРѕ РїРѕРЅСЏРІ, С‡С‚Рѕ СЃРґРµР»Р°С‚СЊ СЌС‚Рѕ Р±С‹Р»Рѕ СѓР¶Р°СЃРЅС‹Рј СЂРµС€РµРЅРёРµРј.
 
-Моча начала понемногу вытекать через чёрное кружево на его нижнем белье, издавая при этом шипение. Он отчаянно пытался сдержать её, схватив телефон и побежав в в*нную.
+РњРѕС‡Р° РЅР°С‡Р°Р»Р° РїРѕРЅРµРјРЅРѕРіСѓ РІС‹С‚РµРєР°С‚СЊ С‡РµСЂРµР· С‡С‘СЂРЅРѕРµ РєСЂСѓР¶РµРІРѕ РЅР° РµРіРѕ РЅРёР¶РЅРµРј Р±РµР»СЊРµ, РёР·РґР°РІР°СЏ РїСЂРё СЌС‚РѕРј С€РёРїРµРЅРёРµ. РћРЅ РѕС‚С‡Р°СЏРЅРЅРѕ РїС‹С‚Р°Р»СЃСЏ СЃРґРµСЂР¶Р°С‚СЊ РµС‘, СЃС…РІР°С‚РёРІ С‚РµР»РµС„РѕРЅ Рё РїРѕР±РµР¶Р°РІ РІ РІ*РЅРЅСѓСЋ.
 
-«БЛИН, БЛИН, БЛИН», — воскликнул он, стоя над унитазом и вертя в руках телефон, пытаясь нажать кнопку записи, несмотря на всю тряску. Наконец он нажал на неё и сорвал штаны, моча мгновенно хлынула наружу, плескаясь в сторону унитаза, как из маленького шланга. Стоны облегчения вырвались из его тела, когда волна за волной моча выливалась из его огромного мочевого пузыря. Прошло почти 3 минуты, прежде чем он, наконец, закончил.
+В«Р‘Р›РРќ, Р‘Р›РРќ, Р‘Р›РРќВ», вЂ” РІРѕСЃРєР»РёРєРЅСѓР» РѕРЅ, СЃС‚РѕСЏ РЅР°Рґ СѓРЅРёС‚Р°Р·РѕРј Рё РІРµСЂС‚СЏ РІ СЂСѓРєР°С… С‚РµР»РµС„РѕРЅ, РїС‹С‚Р°СЏСЃСЊ РЅР°Р¶Р°С‚СЊ РєРЅРѕРїРєСѓ Р·Р°РїРёСЃРё, РЅРµСЃРјРѕС‚СЂСЏ РЅР° РІСЃСЋ С‚СЂСЏСЃРєСѓ. РќР°РєРѕРЅРµС† РѕРЅ РЅР°Р¶Р°Р» РЅР° РЅРµС‘ Рё СЃРѕСЂРІР°Р» С€С‚Р°РЅС‹, РјРѕС‡Р° РјРіРЅРѕРІРµРЅРЅРѕ С…Р»С‹РЅСѓР»Р° РЅР°СЂСѓР¶Сѓ, РїР»РµСЃРєР°СЏСЃСЊ РІ СЃС‚РѕСЂРѕРЅСѓ СѓРЅРёС‚Р°Р·Р°, РєР°Рє РёР· РјР°Р»РµРЅСЊРєРѕРіРѕ С€Р»Р°РЅРіР°. РЎС‚РѕРЅС‹ РѕР±Р»РµРіС‡РµРЅРёСЏ РІС‹СЂРІР°Р»РёСЃСЊ РёР· РµРіРѕ С‚РµР»Р°, РєРѕРіРґР° РІРѕР»РЅР° Р·Р° РІРѕР»РЅРѕР№ РјРѕС‡Р° РІС‹Р»РёРІР°Р»Р°СЃСЊ РёР· РµРіРѕ РѕРіСЂРѕРјРЅРѕРіРѕ РјРѕС‡РµРІРѕРіРѕ РїСѓР·С‹СЂСЏ. РџСЂРѕС€Р»Рѕ РїРѕС‡С‚Рё 3 РјРёРЅСѓС‚С‹, РїСЂРµР¶РґРµ С‡РµРј РѕРЅ, РЅР°РєРѕРЅРµС†, Р·Р°РєРѕРЅС‡РёР».
 
-«Так намного лучше…» — вздохнул он, прежде чем отправить видео клиенту.
+В«РўР°Рє РЅР°РјРЅРѕРіРѕ Р»СѓС‡С€РµвЂ¦В» вЂ” РІР·РґРѕС…РЅСѓР» РѕРЅ, РїСЂРµР¶РґРµ С‡РµРј РѕС‚РїСЂР°РІРёС‚СЊ РІРёРґРµРѕ РєР»РёРµРЅС‚Сѓ.
 
-Вот, держи, надеюсь, это тебя удовлетворит!
+Р’РѕС‚, РґРµСЂР¶Рё, РЅР°РґРµСЋСЃСЊ, СЌС‚Рѕ С‚РµР±СЏ СѓРґРѕРІР»РµС‚РІРѕСЂРёС‚!
 
-Удивительно…
+РЈРґРёРІРёС‚РµР»СЊРЅРѕвЂ¦
 
