--- a/NothingLeft/59055-marvelmcu-stories_04/rus.textile
+++ b/NothingLeft/59055-marvelmcu-stories_04/rus.textile
@@ -1,48 +1,48 @@
-Истории Marvel/MCU — Страница 4
+РСЃС‚РѕСЂРёРё Marvel/MCU вЂ” РЎС‚СЂР°РЅРёС†Р° 4
 
-Автор: NothingLeft [x] (-)
+РђРІС‚РѕСЂ: NothingLeft [x] (-)
 
 *076*2021-07-02 05:41
 
-{{5 мая 2021 г. в 7:02 SM15 сказал:
+{{5 РјР°СЏ 2021 Рі. РІ 7:02 SM15 СЃРєР°Р·Р°Р»:
 
-Вау, отличная глава, очень хорошо написано. Если вы открыты для большего количества запросов, Гамора отчаянно хочет пописить во время миссии, это было бы здорово. Спасибо.
+Р’Р°Сѓ, РѕС‚Р»РёС‡РЅР°СЏ РіР»Р°РІР°, РѕС‡РµРЅСЊ С…РѕСЂРѕС€Рѕ РЅР°РїРёСЃР°РЅРѕ. Р•СЃР»Рё РІС‹ РѕС‚РєСЂС‹С‚С‹ РґР»СЏ Р±РѕР»СЊС€РµРіРѕ РєРѕР»РёС‡РµСЃС‚РІР° Р·Р°РїСЂРѕСЃРѕРІ, Р“Р°РјРѕСЂР° РѕС‚С‡Р°СЏРЅРЅРѕ С…РѕС‡РµС‚ РїРѕРїРёСЃРёС‚СЊ РІРѕ РІСЂРµРјСЏ РјРёСЃСЃРёРё, СЌС‚Рѕ Р±С‹Р»Рѕ Р±С‹ Р·РґРѕСЂРѕРІРѕ. РЎРїР°СЃРёР±Рѕ.
 
 }}
 
-Извините, что так долго не отвечал, Omo.org иногда не любит уведомлять меня. Несмотря на то, что у меня рабочая этика и навыки тайм-менеджмента мокрой картошки, я всегда открыт для новых запросов и рассматриваю вопрос о Гаморе. Если вы ещё этого не сделали, статья о Гаморе уже есть, но я с радостью напишу ещё одну. А пока я желаю вам всего наилучшего.
+РР·РІРёРЅРёС‚Рµ, С‡С‚Рѕ С‚Р°Рє РґРѕР»РіРѕ РЅРµ РѕС‚РІРµС‡Р°Р», Omo.org РёРЅРѕРіРґР° РЅРµ Р»СЋР±РёС‚ СѓРІРµРґРѕРјР»СЏС‚СЊ РјРµРЅСЏ. РќРµСЃРјРѕС‚СЂСЏ РЅР° С‚Рѕ, С‡С‚Рѕ Сѓ РјРµРЅСЏ СЂР°Р±РѕС‡Р°СЏ СЌС‚РёРєР° Рё РЅР°РІС‹РєРё С‚Р°Р№Рј-РјРµРЅРµРґР¶РјРµРЅС‚Р° РјРѕРєСЂРѕР№ РєР°СЂС‚РѕС€РєРё, СЏ РІСЃРµРіРґР° РѕС‚РєСЂС‹С‚ РґР»СЏ РЅРѕРІС‹С… Р·Р°РїСЂРѕСЃРѕРІ Рё СЂР°СЃСЃРјР°С‚СЂРёРІР°СЋ РІРѕРїСЂРѕСЃ Рѕ Р“Р°РјРѕСЂРµ. Р•СЃР»Рё РІС‹ РµС‰С‘ СЌС‚РѕРіРѕ РЅРµ СЃРґРµР»Р°Р»Рё, СЃС‚Р°С‚СЊСЏ Рѕ Р“Р°РјРѕСЂРµ СѓР¶Рµ РµСЃС‚СЊ, РЅРѕ СЏ СЃ СЂР°РґРѕСЃС‚СЊСЋ РЅР°РїРёС€Сѓ РµС‰С‘ РѕРґРЅСѓ. Рђ РїРѕРєР° СЏ Р¶РµР»Р°СЋ РІР°Рј РІСЃРµРіРѕ РЅР°РёР»СѓС‡С€РµРіРѕ.
 
 *079*2021-07-12 14:36
 
-{{11.07.2021 в 7:30 Desperation_fan сказал:
+{{11.07.2021 РІ 7:30 Desperation_fan СЃРєР°Р·Р°Р»:
 
-Итак, у меня есть просьба, но прежде чем я её сделаю, вы видели WandaVision, @NothingLeft?
+РС‚Р°Рє, Сѓ РјРµРЅСЏ РµСЃС‚СЊ РїСЂРѕСЃСЊР±Р°, РЅРѕ РїСЂРµР¶РґРµ С‡РµРј СЏ РµС‘ СЃРґРµР»Р°СЋ, РІС‹ РІРёРґРµР»Рё WandaVision, @NothingLeft?
 
-? Потому что запрос содержит спойлеры.
+? РџРѕС‚РѕРјСѓ С‡С‚Рѕ Р·Р°РїСЂРѕСЃ СЃРѕРґРµСЂР¶РёС‚ СЃРїРѕР№Р»РµСЂС‹.
 
 }}
 
-Да, я видел «ВандаВижен», а также «Сокола», «Зимнего солдата» и «Локи». Я ещё не видел «Чёрную вдову», но я сообщу, когда увижу.
+Р”Р°, СЏ РІРёРґРµР» В«Р’Р°РЅРґР°Р’РёР¶РµРЅВ», Р° С‚Р°РєР¶Рµ В«РЎРѕРєРѕР»Р°В», В«Р—РёРјРЅРµРіРѕ СЃРѕР»РґР°С‚Р°В» Рё В«Р›РѕРєРёВ». РЇ РµС‰С‘ РЅРµ РІРёРґРµР» В«Р§С‘СЂРЅСѓСЋ РІРґРѕРІСѓВ», РЅРѕ СЏ СЃРѕРѕР±С‰Сѓ, РєРѕРіРґР° СѓРІРёР¶Сѓ.
 
-Извините, какая у вас просьба?
+РР·РІРёРЅРёС‚Рµ, РєР°РєР°СЏ Сѓ РІР°СЃ РїСЂРѕСЃСЊР±Р°?
 
 *081*2021-09-25 18:46
 
-Я знаю, что прошло много времени с момента моего последнего поста, но по… лучшим (?) причинам, чем раньше. Но я хотел прояснить некоторые моменты для всех заинтересованных и как бы ответить на вопрос, который я получил недавно.
+РЇ Р·РЅР°СЋ, С‡С‚Рѕ РїСЂРѕС€Р»Рѕ РјРЅРѕРіРѕ РІСЂРµРјРµРЅРё СЃ РјРѕРјРµРЅС‚Р° РјРѕРµРіРѕ РїРѕСЃР»РµРґРЅРµРіРѕ РїРѕСЃС‚Р°, РЅРѕ РїРѕвЂ¦ Р»СѓС‡С€РёРј (?) РїСЂРёС‡РёРЅР°Рј, С‡РµРј СЂР°РЅСЊС€Рµ. РќРѕ СЏ С…РѕС‚РµР» РїСЂРѕСЏСЃРЅРёС‚СЊ РЅРµРєРѕС‚РѕСЂС‹Рµ РјРѕРјРµРЅС‚С‹ РґР»СЏ РІСЃРµС… Р·Р°РёРЅС‚РµСЂРµСЃРѕРІР°РЅРЅС‹С… Рё РєР°Рє Р±С‹ РѕС‚РІРµС‚РёС‚СЊ РЅР° РІРѕРїСЂРѕСЃ, РєРѕС‚РѕСЂС‹Р№ СЏ РїРѕР»СѓС‡РёР» РЅРµРґР°РІРЅРѕ.
 
-Ожидаются ли новые персонажи шоу Marvel?
+РћР¶РёРґР°СЋС‚СЃСЏ Р»Рё РЅРѕРІС‹Рµ РїРµСЂСЃРѕРЅР°Р¶Рё С€РѕСѓ Marvel?
 
-Это будет означать такие шоу, как «Вандавижн», «Локи», «Сокол» и «Зимний солдат» и так далее, и на это я говорю «да». Я знаю, что это несколько сбивает с толку, учитывая, что одним из первых правил было то, что никакие сериалы не включались, но разница между, скажем, «Агентами ЩИТ» и «Локи» заключается в их каноничности или её отсутствии. Официально было сказано, что эти шоу существуют отдельно от MCU, несмотря на то, что в них много общих персонажей. По сути, я намерен сохранить эти части подключёнными к официальной MCU. Приношу свои извинения, если эта новость разочаровывает.
+Р­С‚Рѕ Р±СѓРґРµС‚ РѕР·РЅР°С‡Р°С‚СЊ С‚Р°РєРёРµ С€РѕСѓ, РєР°Рє В«Р’Р°РЅРґР°РІРёР¶РЅВ», В«Р›РѕРєРёВ», В«РЎРѕРєРѕР»В» Рё В«Р—РёРјРЅРёР№ СЃРѕР»РґР°С‚В» Рё С‚Р°Рє РґР°Р»РµРµ, Рё РЅР° СЌС‚Рѕ СЏ РіРѕРІРѕСЂСЋ В«РґР°В». РЇ Р·РЅР°СЋ, С‡С‚Рѕ СЌС‚Рѕ РЅРµСЃРєРѕР»СЊРєРѕ СЃР±РёРІР°РµС‚ СЃ С‚РѕР»РєСѓ, СѓС‡РёС‚С‹РІР°СЏ, С‡С‚Рѕ РѕРґРЅРёРј РёР· РїРµСЂРІС‹С… РїСЂР°РІРёР» Р±С‹Р»Рѕ С‚Рѕ, С‡С‚Рѕ РЅРёРєР°РєРёРµ СЃРµСЂРёР°Р»С‹ РЅРµ РІРєР»СЋС‡Р°Р»РёСЃСЊ, РЅРѕ СЂР°Р·РЅРёС†Р° РјРµР¶РґСѓ, СЃРєР°Р¶РµРј, В«РђРіРµРЅС‚Р°РјРё Р©РРўВ» Рё В«Р›РѕРєРёВ» Р·Р°РєР»СЋС‡Р°РµС‚СЃСЏ РІ РёС… РєР°РЅРѕРЅРёС‡РЅРѕСЃС‚Рё РёР»Рё РµС‘ РѕС‚СЃСѓС‚СЃС‚РІРёРё. РћС„РёС†РёР°Р»СЊРЅРѕ Р±С‹Р»Рѕ СЃРєР°Р·Р°РЅРѕ, С‡С‚Рѕ СЌС‚Рё С€РѕСѓ СЃСѓС‰РµСЃС‚РІСѓСЋС‚ РѕС‚РґРµР»СЊРЅРѕ РѕС‚ MCU, РЅРµСЃРјРѕС‚СЂСЏ РЅР° С‚Рѕ, С‡С‚Рѕ РІ РЅРёС… РјРЅРѕРіРѕ РѕР±С‰РёС… РїРµСЂСЃРѕРЅР°Р¶РµР№. РџРѕ СЃСѓС‚Рё, СЏ РЅР°РјРµСЂРµРЅ СЃРѕС…СЂР°РЅРёС‚СЊ СЌС‚Рё С‡Р°СЃС‚Рё РїРѕРґРєР»СЋС‡С‘РЅРЅС‹РјРё Рє РѕС„РёС†РёР°Р»СЊРЅРѕР№ MCU. РџСЂРёРЅРѕС€Сѓ СЃРІРѕРё РёР·РІРёРЅРµРЅРёСЏ, РµСЃР»Рё СЌС‚Р° РЅРѕРІРѕСЃС‚СЊ СЂР°Р·РѕС‡Р°СЂРѕРІС‹РІР°РµС‚.
 
-Тем не менее, одно шоу, для которого я не буду писать, по крайней мере, от себя — если меня попросят, я могу попробовать — это «Что, если…?». У меня на самом деле нет причин для этого, я просто очень напуган всеми небольшими вариациями в характере персонажа — например, я не мог решить, как изменится реакция Небулы на аварию, если бы это была версия из Эпизода. 2.
+РўРµРј РЅРµ РјРµРЅРµРµ, РѕРґРЅРѕ С€РѕСѓ, РґР»СЏ РєРѕС‚РѕСЂРѕРіРѕ СЏ РЅРµ Р±СѓРґСѓ РїРёСЃР°С‚СЊ, РїРѕ РєСЂР°Р№РЅРµР№ РјРµСЂРµ, РѕС‚ СЃРµР±СЏ вЂ” РµСЃР»Рё РјРµРЅСЏ РїРѕРїСЂРѕСЃСЏС‚, СЏ РјРѕРіСѓ РїРѕРїСЂРѕР±РѕРІР°С‚СЊ вЂ” СЌС‚Рѕ В«Р§С‚Рѕ, РµСЃР»РёвЂ¦?В». РЈ РјРµРЅСЏ РЅР° СЃР°РјРѕРј РґРµР»Рµ РЅРµС‚ РїСЂРёС‡РёРЅ РґР»СЏ СЌС‚РѕРіРѕ, СЏ РїСЂРѕСЃС‚Рѕ РѕС‡РµРЅСЊ РЅР°РїСѓРіР°РЅ РІСЃРµРјРё РЅРµР±РѕР»СЊС€РёРјРё РІР°СЂРёР°С†РёСЏРјРё РІ С…Р°СЂР°РєС‚РµСЂРµ РїРµСЂСЃРѕРЅР°Р¶Р° вЂ” РЅР°РїСЂРёРјРµСЂ, СЏ РЅРµ РјРѕРі СЂРµС€РёС‚СЊ, РєР°Рє РёР·РјРµРЅРёС‚СЃСЏ СЂРµР°РєС†РёСЏ РќРµР±СѓР»С‹ РЅР° Р°РІР°СЂРёСЋ, РµСЃР»Рё Р±С‹ СЌС‚Рѕ Р±С‹Р»Р° РІРµСЂСЃРёСЏ РёР· Р­РїРёР·РѕРґР°. 2.
 
-В более короткой форме; Новые шоу Marvel являются бесплатной игрой, если они придерживаются других правил. Тем не менее, новые персонажи — Сильвия, Моника, возможно, даже Сара — будут добавлены вместе с персонажами, выходящими на ринг после части Line-Up, так что список будет ещё больше.
+Р’ Р±РѕР»РµРµ РєРѕСЂРѕС‚РєРѕР№ С„РѕСЂРјРµ; РќРѕРІС‹Рµ С€РѕСѓ Marvel СЏРІР»СЏСЋС‚СЃСЏ Р±РµСЃРїР»Р°С‚РЅРѕР№ РёРіСЂРѕР№, РµСЃР»Рё РѕРЅРё РїСЂРёРґРµСЂР¶РёРІР°СЋС‚СЃСЏ РґСЂСѓРіРёС… РїСЂР°РІРёР». РўРµРј РЅРµ РјРµРЅРµРµ, РЅРѕРІС‹Рµ РїРµСЂСЃРѕРЅР°Р¶Рё вЂ” РЎРёР»СЊРІРёСЏ, РњРѕРЅРёРєР°, РІРѕР·РјРѕР¶РЅРѕ, РґР°Р¶Рµ РЎР°СЂР° вЂ” Р±СѓРґСѓС‚ РґРѕР±Р°РІР»РµРЅС‹ РІРјРµСЃС‚Рµ СЃ РїРµСЂСЃРѕРЅР°Р¶Р°РјРё, РІС‹С…РѕРґСЏС‰РёРјРё РЅР° СЂРёРЅРі РїРѕСЃР»Рµ С‡Р°СЃС‚Рё Line-Up, С‚Р°Рє С‡С‚Рѕ СЃРїРёСЃРѕРє Р±СѓРґРµС‚ РµС‰С‘ Р±РѕР»СЊС€Рµ.
 
-О Боже.
+Рћ Р‘РѕР¶Рµ.
 
-Тем не менее, я делаю всё возможное, чтобы работать, и я всегда буду извиняться за эти пробелы. Кроме того, я был бы счастлив написать, возможно, разовую статью о Proxima Midnight. Считай, что идёт!
+РўРµРј РЅРµ РјРµРЅРµРµ, СЏ РґРµР»Р°СЋ РІСЃС‘ РІРѕР·РјРѕР¶РЅРѕРµ, С‡С‚РѕР±С‹ СЂР°Р±РѕС‚Р°С‚СЊ, Рё СЏ РІСЃРµРіРґР° Р±СѓРґСѓ РёР·РІРёРЅСЏС‚СЊСЃСЏ Р·Р° СЌС‚Рё РїСЂРѕР±РµР»С‹. РљСЂРѕРјРµ С‚РѕРіРѕ, СЏ Р±С‹Р» Р±С‹ СЃС‡Р°СЃС‚Р»РёРІ РЅР°РїРёСЃР°С‚СЊ, РІРѕР·РјРѕР¶РЅРѕ, СЂР°Р·РѕРІСѓСЋ СЃС‚Р°С‚СЊСЋ Рѕ Proxima Midnight. РЎС‡РёС‚Р°Р№, С‡С‚Рѕ РёРґС‘С‚!
 
-Как всегда, с наилучшими пожеланиями, ни перед кем не кланяюсь.
+РљР°Рє РІСЃРµРіРґР°, СЃ РЅР°РёР»СѓС‡С€РёРјРё РїРѕР¶РµР»Р°РЅРёСЏРјРё, РЅРё РїРµСЂРµРґ РєРµРј РЅРµ РєР»Р°РЅСЏСЋСЃСЊ.
 
-Ничего не осталось
+РќРёС‡РµРіРѕ РЅРµ РѕСЃС‚Р°Р»РѕСЃСЊ
 
